final changes for 4/20 portfolio check

--- a/Hirai_ContactMe.html
+++ b/Hirai_ContactMe.html
@@ -57,6 +57,7 @@
                   </a>
                </p>
                <p><strong>City:  </strong>Dublin, California</p>
+               <p><strong>Linkedin:  </strong><a style="color:black;" href="https://www.linkedin.com/in/koji-hirai-5b508414a/"> Here</a>
             </div>
          </div>
          <hr/>
