--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -134,6 +134,49 @@
             </div>
          </div>
          <br>
+         <!--
+            <div class="row">
+            <div class="col-md-6">
+            <div class="card">
+            <img src="./Images/static.PNG" class="card-img-top" alt="project image">
+            <div class="card-body">
+               <h5 class="card-title">Effects of Static Electricity and Prevention in VEX Robotics</h5>
+               <div class="card-text">
+                  <p><strong>Duration:</strong> September 2019 -  December 2019 <br>
+                     <strong>Course:</strong> N/A<br>
+                     <strong>Objective:</strong> Research the theory behind static electricity and prevent build up in VEX Robotics.<br>
+                     <strong>Type of Project:</strong>Individual <br>
+                     <strong>Rubric:</strong><a target="_blank" href=""> N/A</a>
+                  </p>
+                  <p>Early in the robotics season as captain, I found that one of the main problems I and most other teams had with their robot was the fact that static discharge in the robot kept damaging the electrical ports on the microcontroller, and killed the circuits inside the motors. I decided to research how and why static electricity builds up in our robots by learning about the theory and characteristics of static electricity. I also research common industry practices on preventing electrostatic discharge.  Through this process I was able to develop a new method to apply in VEX robotics. After the implementation of the new design modifications, our robot never suffered electrical damages from static discharge. I not only learned about static electricity itself, but I was able to learn about design practices used by engineers in the real world to combat these problems.</p>
+               </div>
+               <a target="_blank" href="https://docs.google.com/document/d/1RfGGAg5FaBbvVcO0SEB7DGYKL9AGNSp3hp5gPVxML-4/edit#heading=h.i72bbihm3h4a" class="btn btn-primary">Documentaion</a>
+            </div>
+            </div>
+            </div>
+            </div>
+            -->
+         <div class="col-md-6">
+            <!-- Project 2 -->
+            <div class="card">
+               <img src="./Images/image_manipulation.PNG" class="card-img-top" alt="project image">
+               <div class="card-body">
+                  <h5 class="card-title">Image Manipulation Project</h5>
+                  <div class="card-text">
+                     <p><strong>Duration:</strong> March, 23 2020 - March, 30 2020 <br>
+                        <strong>Course:</strong> Computer Science Principles (CSP)<br>
+                        <strong>Objective:</strong> Use Python Imaging Library and create an algorithm to modify images according to the client's request.<br>
+                        <strong>Type of Project:</strong> Partner<br>
+                        <strong>Rubric:</strong><a target="_blank" href="https://docs.google.com/document/d/1CQdumlWQkS6gafi3Hqwa96ay8FHl_V1iIJfR9K8CW6A/edit"> Here</a>
+                     </p>
+                     <p>In this project, my partner and I created an algorithm for a client that wanted to add a frame that incorporated and reflected the interests of the client (art).  We decided to add elements of abstract art using simple geometric shapes and frames inspired by abstract artists, Picasso and Kandinsky. In order to work together effectively, we created separate sub files while we experimented with new functions and features to make sure we don't interfere with each other. We began by adding the basic shapes to the frame and then worked on adding more details. Through the development of this project, I learned more about using computer programming to change images systematically rather than using traditional photo editing software.</p>
+                  </div>
+                  <a target="_blank" href="https://docs.google.com/presentation/d/1-oJekWaWu3SRlK04UyxWB4TyE7nMXNyT4XXEllddN6g/edit" class="btn btn-primary">Documentaion</a>
+               </div>
+            </div>
+         </div>
+      </div>
+      <br>
       </div>
       <footer>
          <div class="jumbotron" style="background-color: #cfe9fc;">
