--- a/Hirai_WorkExperience.html
+++ b/Hirai_WorkExperience.html
@@ -56,6 +56,7 @@
             </div>
          </div>
          <!-- Work Experience 1-->
+         <h2> <strong>Field Trips:</strong></h2>
          <div class="row">
             <div class="col-md-6">
                <img src="./Images/calmaritime1.png" class="img-thumbnail">
@@ -67,12 +68,16 @@
          <br>
          <div class="row">
             <div class="col-md-12">
+               <h4> Cal Maritime Academy</h4>
                <p>Through my experience in the Engineering Academy, I have had the opportunity to attend many field trips. One of the most notable field trips I have attended was the field trip to the California State University Maritime Academy. Prior to attending the field trip, I had always thought that college students learned in a classroom of thousands of students. During the visit to the California Maritime Academy, I learned that there are many types of education available in college. The most unique education environment that I learned about during the tour was their ship education. Students at California Maritime academy had the opportunity to be on a real ship for an entire summer and apply the skills they learned on campus to real-life scenarios. I thought this was a very interesting and effective way to learn concepts since you get to experience aspects of engineering that you can't really learn from a textbook. I also felt that the smaller class sizes and the tuition they offer is very appealing since I would get more experience and live a fun college life without drowning in loans. This field trip gave me a key insight into my future college plans. I had thought college was classroom-style learning with some hands-on activity at school. I also thought all colleges had insanely large class sizes and high tuition. By visiting the California Maritime Academy I was exposed to new schools I had never even heard of and the many types of options I have for college.</p>
+               <h4> National Ignition Facility</h4>
+               <p>One of the most interesting and mind blowing field trips, I have attended was visiting the National Ignition Facility (NIF) at the Lawrence Livermore National Laboratory. I had heard about this facility in the past from a guest speaker that had visited our engineering class. I was intrigued about how the world's largest and most energetic laser used to experiment with fusion ignition was in Livermore. During the visit, I was surprised by the scale of the facility. Although I have seen diagrams and heard about the size, I was shocked to see the actual size of the facility. I learned that this large laser, requires large amounts of electrical power for one experiment, and was surprised by the number of large scale capacitors that was required for the pulse of energy. I was also shocked to that the actual target that the laser was pointed to was very small, I was very surprised that all of the lasers are aimed to it. I was able to see the various systems like the optics and electrical power that were fine tuned and working together for each experiment. This field trip gave me more insight on the research for cleaner and more powerful fusion based Nuclear Energy rather than the traditional fission based energy. Before, I did not have much interest in optics, but after seeing the precise tuning and the high energy it handled, it inspired me into look into fields like optics as a field I can purse in the future.</p>
             </div>
          </div>
          <br>
          <br>
          <!-- Work Experience 2-->
+         <h2> <strong>Guest Speakers:</strong></h2>
          <div class="row">
             <div class="col-md-2">
             </div>
@@ -85,12 +90,42 @@
          <br>
          <div class="row">
             <div class="col-md-12">
+               <h4>James Morehead</h4>
                <p>Another opportunity I had through the Engineering Academy was the many guest speakers from many engineering backgrounds. One example is James Morehead who is a Product Manager from Google. Mr. Morehead gave a presentation about his work environment at Google, roles as a product manager and the process he went through when creating Google Bulletin. Google is a large software company, I had thought the only jobs were high executives like Chief Executive Officer and software engineers, but I learned that there are many other roles. The example he gave was a product manager. He explained that the product manager was the person in charge of coming up with an idea for a product, and making that into reality. They have to consider many factors like customer needs, the market, and then actually turn it into a reality. Mr. Morehead is the Product Manager for Google Bulletin, which is a platform where the ordinary person can share community events. I was particularly interested in the process he went through to create this product because it was something I have used in the past to share robotics tournaments and gave him feedback. He shared how he came up with the idea when he realized many community events should be shared with more people but there wasn't a place where people with no background can share events. He also shared the extensive prototyping and research behind the product before it was even brought to the user test phase. His talk gave me more insight into possible job roles in the future that I can purse.</p>
+               <h4> Jason Yosinksi</h4>
+               <p>Another inspiring guest speaker was Jason Yosinksi from Uber AI Labs. Mr. Yosinksi works with artificial intelligence and machine learning and gave us a overview on how it worked and the intermediate process involved in machine learning. He was able to take the complex idea of artificial intelligence and explained how it worked at the basic level. He showed us how the algorithm recognizes patterns in the images such as colors, outlines, and edges at different levels to make an overall decision of what is shown in the image. Before Mr. Yosinksi's presentation, I was pretty firm of pursuing field of engineering like electrical and mechanical but not computer science. His presentation has allowed me to become more curious about Computer Science and artificial intelligence, and now I want to pursue a combination of Computer Science and another field of engineering such as Electrical Enginering.</p>
                <p>Image Citation: 
                   [Google Bulletin Image]. (2018, January 30). Retrieved April 13, 2019, from https://www.mobileappdaily.com/2018/01/30/google-tests-bulletin-app-experiment-local-news 
                </p>
             </div>
          </div>
+         <h2><strong>Volunteer and Work Experience:</strong></h2>
+         <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+               <img src="./Images/vcm.PNG" class="img-thumbnail">
+            </div>
+            <div class="col-md-2">
+            </div>
+         </div>
+         <br>
+         <div class="row">
+            <div class="col-md-12">
+               <h4>Valley Children's Museum</h4>
+               <p>The Valley Children's Museum, is a place where we bring in STEM ideas and concepts into children activities to promote interest in STEM and active thinking. As a member on the Teen Leadership Council, we brainstorm themes for each month then plan, organize and manage activities for the children at the monthly "Super Saturday" event and during the Dublin Farmers Market. One of the projects that I led at the museum was creating the plane exhibit for the children to play with. For this exhibit, I combined my artistic, robotics, and electrical knowledge to make the propellers operate with a motor, and created a lever that can control the flaps on the plane. This project was a huge success, and the children that came by all enjoyed the realistic and moving components of the plane. Through my volunteering experiences, I have been able to perfect techniques to teach other people. Early on, I realized the challenge behind teaching children compared to peers in my engineering class and robotics club who usually have some level of understanding.  When guiding the children through activities and explaining things, I learned to be more clear and easier to understand so that anyone can follow along.  Without this experience of working with children, I wouldn't have my current level of effective teaching and communication strategies.</p>
+            </div>
+         </div>
+         </br>
+         <h2> <strong>Mentor Experience:</strong></h2>
+         <br>
+         <div class="row">
+            <div class="col-md-12">
+               <p>During the Mentorship Program in the Engineering Academy, my mentor was Howard Hirano, who is a retired systems analyst and engineer from Sandia National Laboratories. Through my mentor, I was able to talk to various people with various backgrounds so I can genuinely understand what field I want to pursue in the future. During the mock interview process, my mentor provided me with crucial parts he would look for in a real interview and gave me constructive feedback. Having regular conversations with my mentor made me more open and confident during conversations and developed skills to ask questions on the spot. The mentorship program helped me narrow down fields of engineering I am interested in, and at the same time prepared my interview skills and perfected my resume for future job and internship opportunities</p>
+            </div>
+         </div>
+         <br>
+         <br>
       </div>
       <footer>
          <div class="jumbotron" style="background-color: #cfe9fc;">
