fixed js animation errors

--- a/archive.html
+++ b/archive.html
@@ -15,8 +15,6 @@
       <!-- Taken from W3 Schools -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="./Bootstrap_4.3.1/js/bootstrap.min.js"></script>
-      <script src="jspt2.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
    </head>
    <header>
       <!-- Taken from Bootstrap Documentation-->
@@ -79,22 +77,20 @@
          <div class="row">
             <div class="col-md-12">
                <div class="card">
-                  <div class="jscard1">
-                     <div class="card border-primary">
-                        <div class="d-flex flex-row">
-                           <div class="card-body row">
-                              <div class="col-md-12 col-lg-9">
-                                 <strong>Projects</strong>
-                                 <h2>Aerodynamic Design Project</h2>
-                                 <h5>Winter 2019</h5>
-                                 <p class="cardtext1">In this project, I was tasked to build a rocket that flies the longest distance. The main constraint was that only paper and paper-based materials were allowed. </p>
-                                 <br>
-                                 <br>
-                                 <a style="color:blue;"href="Hirai_Projects.html">Continue reading...</a>
-                              </div>
-                              <div class="col-md-12 col-lg-3">
-                                 <img class="card-img-right" src="./Images/rocketproj2.PNG" height="275px" width="200px"/>
-                              </div>
+                  <div class="card border-primary">
+                     <div class="d-flex flex-row">
+                        <div class="card-body row">
+                           <div class="col-md-12 col-lg-9">
+                              <strong>Projects</strong>
+                              <h2>Aerodynamic Design Project</h2>
+                              <h5>Winter 2019</h5>
+                              <p>In this project, I was tasked to build a rocket that flies the longest distance. The main constraint was that only paper and paper-based materials were allowed. </p>
+                              <br>
+                              <br>
+                              <a style="color:blue;"href="Hirai_Projects.html">Continue reading...</a>
+                           </div>
+                           <div class="col-md-12 col-lg-3">
+                              <img class="card-img-right" src="./Images/rocketproj2.PNG" height="275px" width="200px"/>
                            </div>
                         </div>
                      </div>
@@ -107,20 +103,18 @@
          <div class="row">
             <div class="col-md-12">
                <div class="card">
-                  <div class="jscard2">
-                     <div class="card border-primary">
-                        <div class="d-flex flex-row">
-                           <div class="card-body row">
-                              <div class="col-md-12 col-lg-8">
-                                 <strong>Work Experience</strong>
-                                 <h2>Cal Maritime Academy Field Trip</h2>
-                                 <h5>Winter 2019</h5>
-                                 <p class="cardtext2">I visted the California Maritime Academy campus to learn about the programs offered at that school. During the field trip I was able to see the numerous engineering opportunities available at maritime schools and expand my potential college major options.</p>
-                                 <a style="color:blue;"href="Hirai_WorkExperience.html">Continue reading...</a>
-                              </div>
-                              <div class="col-md-12 col-lg-4">
-                                 <img class="card-img-right" src="./Images/calmaritime1.png" style= "height:275px; max-width:350px;"/>
-                              </div>
+                  <div class="card border-primary">
+                     <div class="d-flex flex-row">
+                        <div class="card-body row">
+                           <div class="col-md-12 col-lg-8">
+                              <strong>Work Experience</strong>
+                              <h2>Cal Maritime Academy Field Trip</h2>
+                              <h5>Winter 2019</h5>
+                              <p>I visted the California Maritime Academy campus to learn about the programs offered at that school. During the field trip I was able to see the numerous engineering opportunities available at maritime schools and expand my potential college major options.</p>
+                              <a style="color:blue;"href="Hirai_WorkExperience.html">Continue reading...</a>
+                           </div>
+                           <div class="col-md-12 col-lg-4">
+                              <img class="card-img-right" src="./Images/calmaritime1.png" style= "height:275px; max-width:350px;"/>
                            </div>
                         </div>
                      </div>
@@ -133,15 +127,14 @@
          <div class="row">
             <div class="col-md-12">
                <div class="card">
-                  <div class="jscard3">
-                     <div class="card border-primary">
+                  <div class="card border-primary">
                      <div class="d-flex flex-row">
                         <div class="card-body row">
                            <div class="col-md-12 col-lg-8">
                               <strong>Projects</strong>
                               <h2>Solar Hydrogen Vehicle Project</h2>
                               <h5>Fall 2018</h5>
-                              <p class="cardtext3">In this project our goal was to build a car that can be powered by both solar and hydrogen fuel cells. We were limited to building a vehicle out of only VEX parts and powering the motor only from the power outputted by the solar/hydrogen cell</p>
+                              <p>In this project our goal was to build a car that can be powered by both solar and hydrogen fuel cells. We were limited to building a vehicle out of only VEX parts and powering the motor only from the power outputted by the solar/hydrogen cell</p>
                               <a style="color:blue;"href="Hirai_Projects.html">Continue reading...</a>
                            </div>
                            <div class="col-md-12 col-lg-4">
@@ -153,13 +146,11 @@
                </div>
             </div>
          </div>
-      </div>
-      <br>
-      <!-- 4th Card -->
-      <div class="row">
-         <div class="col-md-12">
-            <div class="card">
-               <div class="jscard4">
+         <br>
+         <!-- 4th Card -->
+         <div class="row">
+            <div class="col-md-12">
+               <div class="card">
                   <div class="card border-primary">
                      <div class="d-flex flex-row">
                         <div class="card-body row">
@@ -167,7 +158,7 @@
                               <strong>About Me</strong>
                               <h2>About Me</h2>
                               <h4></h4>
-                              <p class="cardtext4">I am a Junior at Dublin High School and a part of the Engineering and Design Academy at my school. I am interested in pursing electrical engineering and computer science in the future.</p>
+                              <p>I am a Junior at Dublin High School and a part of the Engineering and Design Academy at my school. I am interested in pursing electrical engineering and computer science in the future.</p>
                               <a style="color:blue;"href="Hirai_AboutMe.html">Continue reading...</a>
                            </div>
                            <div class="col-md-12 col-lg-3">
@@ -179,8 +170,7 @@
                </div>
             </div>
          </div>
-      </div>
-      <br>
+         <br>
       </div>
    </body>
    <footer>
