fixed style error

--- a/Hirai_ContactMe.html
+++ b/Hirai_ContactMe.html
@@ -56,7 +56,7 @@
                <p><strong>Email: </strong><a style="color:black;" href="mailto:khirai.easc@gmail.com">khirai.easc@gmail.com
                   </a>
                </p>
-               <p><strong>City:  </strong>Dublin, California</p>
+               <!-- <p><strong>City:  </strong>Dublin, California</p> -->
                <p><strong>Linkedin:  </strong><a style="color:black;" href="https://www.linkedin.com/in/koji-hirai-5b508414a/"> Here</a>
             </div>
          </div>
