--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -175,6 +175,52 @@
                   <a target="_blank" href="https://docs.google.com/presentation/d/1-oJekWaWu3SRlK04UyxWB4TyE7nMXNyT4XXEllddN6g/edit" class="btn btn-primary">Documentaion</a>
                </div>
             </div>
+            </div>
+                     <br>
+         <div class="row">
+            <div class="col-md-6">
+               <!-- Project 3 -->
+               <div class="card">
+                  <img src="./Images/rocketproj2.PNG" class="card-img-top" alt="project image">
+                  <div class="card-body">
+                     <h5 class="card-title">Circuit Design Project</h5>
+                     <div class="card-text">
+                        <p><strong>Duration:</strong> October 12, 2020 - October 21, 2020<br>
+                           <strong>Course:</strong> Digital Electronics (DE)<br>
+                           <strong>Objective:</strong> To create a circuit using combinational logic<br>
+                           <strong>Type of Project:</strong> Individual<br>
+                           <strong>Rubric:</strong><a target="_blank" href="https://docs.google.com/document/d/1yjwN7LH0IgNYhLpn0aES0egFUkqyCj0S813XRLU7tvk/edit?usp=sharing"> Here</a>
+                        </p>
+                        <p>For this project, we were tasked with building a combinational logic circuit. </p>
+                        <br>
+                        <br>
+                     </div>
+                     <a target="_blank" href="https://docs.google.com/document/d/1U53y1vQxS9BTkS7Su2KXnpKzwE-YtwQ7dq8fliUCl_s/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <!-- Project 4 -->
+               <div class="card">
+                  <img src="./Images/ohmyspikesproj.PNG" class="card-img-top" alt="project image">
+                  <div class="card-body">
+                     <h5 class="card-title">Texas Instruments Electronics Online Challenge</h5>
+                     <div class="card-text">
+                        <p><strong>Duration:</strong> September 15, 2020 - December 8, 2020<br>
+                           <strong>Course:</strong> N/A <br>
+                           <strong>Objective:</strong> Disassemble and Analyze Electronic Devices<br>
+                           <strong>Type of Project:</strong> Team<br>
+                           <strong>Rubric:</strong><a target="_blank" href=""> Here</a>
+                        </p>
+                        <p>For this project, my partner and I worked to build an app using MIT App inventor. We were given a tutorial to work off of and we tasked to improve the app. Our app was called 'Oh My Spikes' where a user taps the screen to move the bird and tries to avoid the spikes located on the side of the screen. At first, we noticed that the tutorial app was built for a phone-sized screen and was not able to scale to the tablet we were using. Another issue we noticed was that the bird movement seemed very unnatural. The first improvement we made was to fix the screen scaling of the app so it would be full screen on tablet devices. We not only resized the spikes but also improved the randomization of the spike locations. Another improvement we made was the movement of the bird. We changed it so that the bird’s movements were more realistic and align with physics. Through this project, I learned more about how mobile apps are programmed and the different types of inputs it is capable of supporting.</p>
+                     </div>
+                     <br>
+                     <a target="_blank" href="https://docs.google.com/document/d/1RXqh-tJGYQHOmxursZcq9TxMyvLi8DmZFgi1o_uXMTc/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <br>
          </div>
       </div>
       <br>
