--- a/index.html
+++ b/index.html
@@ -73,7 +73,31 @@
    <body>
       <!-- Cards on home page -->
       <div class="container">
-         <!-- 1st Card -->
+        <!-- 1st Card -->
+         <div class="row">
+            <div class="col-md-12">
+               <div class="card">
+                  <div class="card border-primary">
+                     <div class="d-flex flex-row">
+                        <div class="card-body row">
+                           <div class="col-md-12 col-lg-8">
+                              <strong>Projects</strong>
+                              <h2>Circuit Design Project</h2>
+                              <h5>Fall 2020</h5>
+                              <p>In this project my goal was to build a circuit system using combinational logic components. We were required to have at least 3 inputs and 1 output. I decided to create a railroad junction point using combinational logic.</p>
+                              <a style="color:blue;"href="Hirai_Projects.html">Continue reading...</a>
+                           </div>
+                           <div class="col-md-12 col-lg-4">
+                              <img class="card-img-right" src="./Images/circuitdesignproj.PNG"  style = "height:275px; max-width:350px;"/>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <br>
+         <!-- 2nd Card -->
          <div class="row">
             <div class="col-md-12">
                <div class="card">
@@ -99,7 +123,7 @@
             </div>
          </div>
          <br>
-         <!-- 2nd Card -->
+         <!-- 3rd Card -->
          <div class="row">
             <div class="col-md-12">
                <div class="card">
@@ -123,7 +147,7 @@
             </div>
          </div>
          <br>
-         <!-- 3rd Card -->
+         <!-- 4th Card -->
          <div class="row">
             <div class="col-md-12">
                <div class="card">
@@ -134,7 +158,7 @@
                               <strong>Projects</strong>
                               <h2>Solar Hydrogen Vehicle Project</h2>
                               <h5>Fall 2018</h5>
-                              <p>In this project our goal was to build a car that can be powered by both solar and hydrogen fuel cells. We were limited to building a vehicle out of only VEX parts and powering the motor only from the power outputted by the solar/hydrogen cell</p>
+                              <p>In this project our goal was to build a car that can be powered by both solar and hydrogen fuel cells. We were limited to building a vehicle out of only VEX parts and powering the motor only from the power outputted by the solar/hydrogen cell.</p>
                               <a style="color:blue;"href="Hirai_Projects.html">Continue reading...</a>
                            </div>
                            <div class="col-md-12 col-lg-4">
@@ -147,7 +171,7 @@
             </div>
          </div>
          <br>
-         <!-- 4th Card -->
+         <!-- 5th Card -->
          <div class="row">
             <div class="col-md-12">
                <div class="card">
