interview update 1, about me, projects

--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -181,7 +181,7 @@
                <div class="card">
                   <img src="./Images/circuitdesignproj.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
-                     <h5 class="card-title">Circuit Design Project</h5>
+                     <h5 class="card-title">P1.2.7 Circuit Design Project</h5>
                      <div class="card-text">
                         <p><strong>Duration:</strong> October 12, 2020 - October 21, 2020<br>
                            <strong>Course:</strong> Digital Electronics (DE)<br>
@@ -226,6 +226,26 @@
             </div>
          </div>
          <br>
+                  <div class="row">
+            <div class="col-md-6">
+               <!-- Project 3 -->
+               <div class="card">
+                  <img src="./Images/p235.JPG" class="card-img-top" alt="project image">
+                  <div class="card-body">
+                     <h5 class="card-title">P2.3.5 PLD Design Project</h5>
+                     <div class="card-text">
+                        <p><strong>Duration:</strong> March 4, 2021 - March 13, 2021<br>
+                           <strong>Course:</strong> Digital Electronics (DE)<br>
+                           <strong>Objective:</strong> Create a display using a Programmable Logic Device (PLD)<br>
+                           <strong>Type of Project:</strong> Individual<br>
+                           <strong>Rubric:</strong><a target="_blank" href="https://docs.google.com/document/d/1bj6-xsUEqrbRyhcmdMjbbWU-HiLEMf1yp-fiAjFgoPY/edit?usp=sharing"> Here</a>
+                        </p>
+                        <p>In this project, I was tasked to create a circuit using a Programmable Logic Device (PLD). I was required to have at least 4 inputs, 5 outputs, and 16 different states. I created a display using a seven-segment display, which would display "Ready 9 8 7 6 5 4 3 2 1". The purpose of the circuit was to substitute for a camera's timer function, which is often difficult to know when the photo will be taken. Other applications include a rocket launch counter. I began by creating a truth table which was then inputed into a logic converter which created the circuit's logic. This was then uploaded to the PLD to complete the project. Through this project, I learned the significance of Programmable Logic Devices, which significantly reduces the time required to create a combinational logic circuit. There is no need to use individual integrated circuits leading to higher efficiency and compact form factor.  </p>
+                     </div>
+                     <a target="_blank" href="https://docs.google.com/document/d/1igCus_N1QdjMFj-m-2cyFTMMmiSaGYpLnZUPFG1_Amk/edit?usp=sharing"class="btn btn-primary">Documentaion</a>
+                  </div>
+               </div>
+            </div>
       </div>
       </div>
       <br>
