--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -136,6 +136,7 @@
          <br>
          <div class="row">
             <div class="col-md-6">
+              <!-- Project 5 -->
                <div class="card">
                   <img src="./Images/static.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
@@ -154,7 +155,7 @@
                </div>
             </div>
             <div class="col-md-6">
-               <!-- Project 2 -->
+               <!-- Project 6 -->
                <div class="card">
                   <img src="./Images/image_manipulation.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
@@ -177,7 +178,7 @@
          <br>
          <div class="row">
             <div class="col-md-6">
-               <!-- Project 3 -->
+               <!-- Project 7 -->
                <div class="card">
                   <img src="./Images/circuitdesignproj.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
@@ -205,11 +206,11 @@
                </div>
             </div>
             <div class="col-md-6">
-               <!-- Project 4 -->
+               <!-- Project 8 -->
                <div class="card">
                   <img src="./Images/ti2020.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
-                     <h5 class="card-title">Texas Instruments Electronics Online Challenge</h5>
+                     <h5 class="card-title">Texas Instruments Electronics Online Challenge 2021</h5>
                      <div class="card-text">
                         <p><strong>Duration:</strong> September 15, 2020 - December 8, 2020<br>
                            <strong>Course:</strong> N/A <br>
@@ -228,7 +229,7 @@
          <br>
                   <div class="row">
             <div class="col-md-6">
-               <!-- Project 3 -->
+               <!-- Project 9 -->
                <div class="card">
                   <img src="./Images/p235.JPG" class="card-img-top" alt="project image">
                   <div class="card-body">
