--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
                               <strong>About Me</strong>
                               <h2>About Me</h2>
                               <h4></h4>
-                              <p>I am a Senior at Dublin High School and a part of the Engineering and Design Academy at my school. I am interested in pursing electrical engineering and computer science in the future.</p>
+                              <p>I am a Senior at Dublin High School in the Engineering and Design Academy. I am interested in pursing electrical engineering and computer science in the future.</p>
                               <a style="color:blue;"href="Hirai_AboutMe.html">Continue reading...</a>
                            </div>
                            <div class="col-md-12 col-lg-3">
-                              <img class="card-img-right" src="./Images/pfp.jpg" height="275px" width="200px"/>
+                              <img class="card-img-right" src="./Images/IMG_2898.JPG" height="275px" width="200px"/>
                            </div>
                         </div>
                      </div>
