--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -66,7 +66,7 @@
                         <p>In this project, my group and I had to choose a consumer electronic to disassemble and write a report on the finding. I had taken apart electronics in the past but never had to analyze those components and its functions. We picked an Amazon Kindle Paperwhite to disassemble because we wanted to know how the unique screen functions, and how the tablet overall works. My role in the project was to research the Integrated Chips used and find a role in the tablet's overall function. I also researched the basic electronic components such as capacitors, resistors, diodes, oscillators to find out their functions. I was able to learn in-depth about electrical components and their applications through this project. After the research, I helped organize the information into an organized document of findings.</p>
                      </div>
                      <br>
-                     <a target="_blank" href="https://docs.google.com/document/d/1KmdLYPraxpIs8SBkPTI7Bv2HtRyKe4v4zHrZazE9ZAA/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1KmdLYPraxpIs8SBkPTI7Bv2HtRyKe4v4zHrZazE9ZAA/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -85,7 +85,7 @@
                         </p>
                         <p>In this project, my group and I were tasked to create a vehicle made from VEX parts and run off solar or hydrogen cells. I was one of the main builders of the car and tried to make the car as light as possible. Since the car receives very minimal voltage to run the motor, the amount of force it could output was much less. This made weight a key factor for speed and the ability to move 1 meter. The car also had to support 4 different configurations of solar and hydrogen cells which made the design even more difficult. We used the lightest components such as VEX plates which were thin and small. We also used a speed gear ratio since the motor rotated at a slow speed and we wanted to make the car move faster. Through this project, I learned the engineering challenges when building vehicles powered by renewable energy sources because of the low amount of power they produce.</p>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/document/d/1K3OT71LtoKebtxoSwxSxQpTfHfaHfpTKrBWpYLocMZg/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1K3OT71LtoKebtxoSwxSxQpTfHfaHfpTKrBWpYLocMZg/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -108,7 +108,7 @@
                         <p>For this project, we were tasked with building a paper rocket that flies the longest distance. The constraint we had was that we could only use paper-based products and tape. This makes it harder to make durable rockets that can withstand the high pressure during the launch since the rockets were air powered. Although this was a group project each member had to create 2 rocket designs. My original design had 3 fins and a long and thin cone. However, the paper used for the body of the rocket got crushed and plugged the barrel. This makes the rocket explode at the test. For my next iteration, I used tape on the inside to prevent the issue and changed the fin to a smaller aerodynamic design. My second rocket went over the entire length of the football field. From this project, I learned the rationale behind the design for an arrow by using a similar design for my rocket. I also learned the importance of the center of gravity when building flying devices.</p>
                         <br>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/document/d/1xj6huDznvLDdMHzUwJMwQGO2bz3Na0RF4Il5nPkmoNQ/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1xj6huDznvLDdMHzUwJMwQGO2bz3Na0RF4Il5nPkmoNQ/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -128,7 +128,7 @@
                         <p>For this project, my partner and I worked to build an app using MIT App inventor. We were given a tutorial to work off of and we tasked to improve the app. Our app was called 'Oh My Spikes' where a user taps the screen to move the bird and tries to avoid the spikes located on the side of the screen. At first, we noticed that the tutorial app was built for a phone-sized screen and was not able to scale to the tablet we were using. Another issue we noticed was that the bird movement seemed very unnatural. The first improvement we made was to fix the screen scaling of the app so it would be full screen on tablet devices. We not only resized the spikes but also improved the randomization of the spike locations. Another improvement we made was the movement of the bird. We changed it so that the bird’s movements were more realistic and align with physics. Through this project, I learned more about how mobile apps are programmed and the different types of inputs it is capable of supporting.</p>
                      </div>
                      <br>
-                     <a target="_blank" href="https://docs.google.com/document/d/1RXqh-tJGYQHOmxursZcq9TxMyvLi8DmZFgi1o_uXMTc/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1RXqh-tJGYQHOmxursZcq9TxMyvLi8DmZFgi1o_uXMTc/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -150,7 +150,7 @@
                         </p>
                         <p>Early in the robotics season as captain, I found that one of the main problems I and most other teams had with their robot was the fact that static discharge in the robot kept damaging the electrical ports on the microcontroller, and killed the circuits inside the motors. I decided to research how and why static electricity builds up in our robots by learning about the theory and characteristics of static electricity. I also research common industry practices on preventing electrostatic discharge.  Through this process I was able to develop a new method to apply in VEX robotics. After the implementation of the new design modifications, our robot never suffered electrical damages from static discharge. I not only learned about static electricity itself, but I was able to learn about design practices used by engineers in the real world to combat these problems.</p>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/document/d/1RfGGAg5FaBbvVcO0SEB7DGYKL9AGNSp3hp5gPVxML-4/edit#heading=h.i72bbihm3h4a" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1RfGGAg5FaBbvVcO0SEB7DGYKL9AGNSp3hp5gPVxML-4/edit#heading=h.i72bbihm3h4a" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -170,7 +170,7 @@
                         </p>
                         <p>In this project, my partner and I created an algorithm for a client that wanted to add a frame that incorporated and reflected the interests of the client (art).  We decided to add elements of abstract art using simple geometric shapes and frames inspired by abstract artists, Picasso and Kandinsky. In order to work together effectively, we created separate sub files while we experimented with new functions and features to make sure we don't interfere with each other. We began by adding the basic shapes to the frame and then worked on adding more details. Through the development of this project, I learned more about using computer programming to change images systematically rather than using traditional photo editing software.<br><br><br></p>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/presentation/d/1-oJekWaWu3SRlK04UyxWB4TyE7nMXNyT4XXEllddN6g/edit" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/presentation/d/1-oJekWaWu3SRlK04UyxWB4TyE7nMXNyT4XXEllddN6g/edit" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -201,7 +201,7 @@
                         <br>
                         <br>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/document/d/1OjPWqaAt0PlmS2q9BRvXI2Xg_raT3AikPKMFk_ppWrk/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1OjPWqaAt0PlmS2q9BRvXI2Xg_raT3AikPKMFk_ppWrk/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -221,7 +221,7 @@
                         <p>In this project, I decided to disassemble a BaoFeng 2 way radio that operates within the Amateur Radio frequencies. I was interested in the low, affordable cost of this radio despite having the ability to operate on two distinct frequencies. As I disassembled the device, I noticed the simple internal circuit board with minimal components. As I analyzed the the integrated circuit chips and other electronic components on the circuit board, I realized that this radio used a technology called software defined radio or SDR. This was a modern type of radio that used software to modulate and demodulate the radio signals, or in other words, rather than building a circuit to control the radio, much of the process was done by a processing chip and software. The SDR technology significantly simplified the radios, which traditionally used various capacitors, inductors and other components to tune the frequencies. The simplification allowed for companies with less technological experience or expertise to build radios like this. However, despite the SDR nature of this particular radio, there were still many capacitors and inductors especially near the antenna used for transmission and receiving. This made me realize the complexity of working with radios. Today, radios seem like outdated technology, especially with the introduction of cell phone and cellular networks. However, the WiFi, Bluetooth and cellular communication that we rely on in our everyday lives are still based on the same technology. Without radio technology like the ones seen in the radio I disassembled, modern communication systems may not have existed in our lives today.</p>
                      </div>
                      <br>
-                     <a target="_blank" href="https://docs.google.com/document/d/1WQ3ADbyHsA5pBPAX1egE7RL6t0IseCg26Pgc0dHbics/edit?usp=sharing" class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1WQ3ADbyHsA5pBPAX1egE7RL6t0IseCg26Pgc0dHbics/edit?usp=sharing" class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
@@ -243,7 +243,7 @@
                         </p>
                         <p>In this project, I was tasked to create a circuit using a Programmable Logic Device (PLD). I was required to have at least 4 inputs, 5 outputs, and 16 different states. I created a display using a seven-segment display, which would display "Ready 9 8 7 6 5 4 3 2 1". The purpose of the circuit was to substitute for a camera's timer function, which is often difficult to know when the photo will be taken. Other applications include a rocket launch counter. I began by creating a truth table which was then inputed into a logic converter which created the circuit's logic. This was then uploaded to the PLD to complete the project. Through this project, I learned the significance of Programmable Logic Devices, which significantly reduces the time required to create a combinational logic circuit. There is no need to use individual integrated circuits leading to higher efficiency and compact form factor.  </p>
                      </div>
-                     <a target="_blank" href="https://docs.google.com/document/d/1igCus_N1QdjMFj-m-2cyFTMMmiSaGYpLnZUPFG1_Amk/edit?usp=sharing"class="btn btn-primary">Documentaion</a>
+                     <a target="_blank" href="https://docs.google.com/document/d/1igCus_N1QdjMFj-m-2cyFTMMmiSaGYpLnZUPFG1_Amk/edit?usp=sharing"class="btn btn-primary">Documentation</a>
                   </div>
                </div>
             </div>
