sem 2 portfolio update

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                               <strong>About Me</strong>
                               <h2>About Me</h2>
                               <h4></h4>
-                              <p>I am a Senior at Dublin High School in the Engineering and Design Academy. I am interested in pursing electrical engineering and computer science in the future.</p>
+                              <p>I am a Senior at Dublin High School in the Engineering and Design Academy. In the fall, I will be studying Material Science and Engineering at the University of California, Irvine.</p>
                               <a style="color:blue;"href="Hirai_AboutMe.html">Continue reading...</a>
                            </div>
                            <div class="col-md-12 col-lg-3">
