--- a/Hirai_WorkExperience.html
+++ b/Hirai_WorkExperience.html
@@ -135,6 +135,8 @@
          <br>
          <br>
       </div>
+      </div>
+      </div>
       <footer>
          <div class="jumbotron" style="background-color: #cfe9fc;">
             <div class="container">
