--- a/Hirai_AboutMe.html
+++ b/Hirai_AboutMe.html
@@ -59,7 +59,7 @@
             <div class="col-md-6">
                <!-- About me Content -->
                <p>
-                  Hi! My name is Koji Hirai, an aspiring engineer. In the fall, I will be studying Material Science and Engineering at the University of California, Irvine. 
+                  Hi! My name is Koji Hirai, an aspiring engineer. I am currently a Freshman studying Electrical Engineering at the University of California, Irvine. 
                   <br>
                   <br>
                   Through various experiences and exposure to the vast range of engineering disciplines, I have ultimately learned that they are interconnected. Everything works together from a robotic arm, the circuits, and the software to control it all. In college, I am most interested in Electrical Engineering as the ability to use the microscopic formation of silicon in integrated circuits to control something much larger is truly mindblowing. I am most interested in electronics because of how much electronics surround us. However, in the longer term, I am interested in pursuing patent law as it allows me to be involved across engineering fields and at the forefront of engineering development.
