--- a/Hirai_Projects.html
+++ b/Hirai_Projects.html
@@ -140,7 +140,7 @@
                <div class="card">
                   <img src="./Images/static.PNG" class="card-img-top" alt="project image">
                   <div class="card-body">
-                     <h5 class="card-title">Effects of Static Electricity and Prevention in VEX Robotics</h5>
+                     <h5 class="card-title">Preventing Electrostatic Dischage in VEX Robotics</h5>
                      <div class="card-text">
                         <p><strong>Duration:</strong> September 2019 -  December 2019 <br>
                            <strong>Course:</strong> N/A<br>
