--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                animation: none;
                }
             </style>
-            <h1>Koji Hirai Portfolio</h1>
+            <h1>Koji Hirai's Engineering Online Portfolio</h1>
             <h3>I am <span class="typed-text"></span><span class="cursor">&nbsp;</span></h3>
          </div>
          <script src = "main.js"></script>
